# inkterface

./: .gitignore  .qmlformat.ini  CMakeLists.txt  Containerfile  readme.md
.github/workflows/: release.yml
boards/: .gitignore
boards/Adafruit Feather ESP32-S3/: Adafruit ESP32-S3 8MB No PSRAM.kicad_pcb  Adafruit ESP32-S3 8MB No PSRAM.kicad_pro  Adafruit ESP32-S3 8MB No PSRAM.kicad_sch
boards/Adafruit Feather ESP32-S3 V2/: Adafruit ESP32 Feather V2-eagle-import.kicad_sym  Adafruit ESP32 Feather V2.kicad_pcb  Adafruit ESP32 Feather V2.kicad_pro  Adafruit ESP32 Feather V2.kicad_sch  Adafruit_ESP32_Feather_V2_1.kicad_sch  sym-lib-table
boards/Adafruit eInk Breakout Friend/: Adafruit eInk Breakout Friend-eagle-import.kicad_sym  Adafruit eInk Breakout Friend.kicad_pcb  Adafruit eInk Breakout Friend.kicad_pro  Adafruit eInk Breakout Friend.kicad_sch  sym-lib-table
boards/Adafruit eInk Feather Friend/: Adafruit eInk Feather Friend-eagle-import.kicad_sym  Adafruit eInk Feather Friend.kicad_pcb  Adafruit eInk Feather Friend.kicad_pro  Adafruit eInk Feather Friend.kicad_sch  sym-lib-table
cad/: Inkterface - Battery Retainer.step  Inkterface - Battery Retainer.stl  Inkterface - Board Plate.step  Inkterface - Board Plate.stl  Inkterface - Faceplate.step  Inkterface - Faceplate.stl  Inkterface - Midplate Left.step  Inkterface - Midplate Left.stl  Inkterface - Midplate Right.step  Inkterface - Midplate Right.stl  Inkterface - Print Plate.step  Inkterface - Print Plate.stl
design/: mockup.free
firmware/: CMakeLists.txt  autorev.py  platformio.ini  sdkconfig.defaults
firmware/src/: gaben.h  main.c  main.ino
include/: artwork.hpp  config.h.in  frunk-finder.hpp  frunk-state.hpp  frunk.hpp  loghandler.hpp  mango.hpp  panel-finder.hpp  panel-state.hpp  panel.hpp  steam.hpp  svcmgr.hpp  sysstats.hpp  unsig.hpp
mac/: Info.plist
qml/: FrunkConfigPage.qml  FrunkFieldOverlay.qml  FrunkListPage.qml  FrunkPanel.qml  PanelConfigPage.qml  PanelDelegate.qml  PanelFieldOverlay.qml  PanelListPage.qml  VBevelRect.qml  VBoxedReadout.qml  VButton.qml  VConfirmButton.qml  VDelayButton.qml  VGroupBox.qml  VLabel.qml  VProgressBar.qml  VReadout.qml  VRect.qml  VSparkline.qml  VTextField.qml  VToast.qml  main.qml
resources/: inkterface.desktop  launch.sh  mango-frunk.desktop
scripts/: build.sh  install.sh
src/: artwork.cpp  frunk-finder.cpp  frunk.cpp  main.cpp  mango.cpp  panel-finder.cpp  panel.cpp  steam.cpp  svcmgr.cpp  sysstats.cpp  unsig.cpp
web/: d.sh  index.html  manifest_featherv1.json  manifest_featherv2.json
